# template_sphinx

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
template_sphinx/: conf.py  index.rst
