[project]
name = "template_sphinx"
version = "0.0.0"
description = "Hello World"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = ["Template"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "sphinx>=8.2.3",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/template_python"
Repository = "https://github.com/NicholasSynovic/template_python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
